# DOGcosmoS

./: DOGcosmoS.toml  README.md  pyproject.toml
DOGcosmoS/: .sample_selection.py.swp  R_last.py  __init.py__  check_angmom_reliability.py  disk_size.py  krot.py  plot_rotation_curve_diversity.py  quantify_diversity_vcirc.py  rotation_curve_shapes.py  rotmat.py  sample_indices.py  sample_selection.py  specify_your_paths.ini  structural_properties.py  vcirc.py  vcirc_components.py  vrot_HI_NEW.py
DOGcosmoS.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
DOGcosmoS/.ipynb_checkpoints/: check_angmom_reliability-checkpoint.py  eta_rot_eta_bar-checkpoint.py  make_plot-checkpoint.py  plot_rotation_curve_diversity-checkpoint.py  rotation_curve_shapes-checkpoint.py  sample_selection-checkpoint.py  specify_your_paths-checkpoint.ini  vcirc-checkpoint.py
DOGcosmoS/plots/: __init.py__  plot_rotation_curve_diversity.py
docs/source/: check_angmom_reliability.rst  conf.py  index.rst  rotation_curve_shapes.rst  sample_selection.rst  structural_properties.rst  vcirc.rst
docs/source/.ipynb_checkpoints/: conf-checkpoint.py
tests/: __init.py__  ls  specify_your_paths.ini  test_plot_rotation_curve_diversity.py  test_rotation_curve_shapes.py  test_sample_selection.py
tests/.ipynb_checkpoints/: specify_your_paths-checkpoint.ini
